crates/jolt_java_syntax/src/parser/snapshots/jolt_java_syntax__parser__tests__annotation_interface_members_are_annotation_element_declarations.snap
---
source: crates/jolt_java_syntax/src/parser/tests.rs
assertion_line: 2458
expression: "&parse"
---
syntax:
CompilationUnit
  AnnotationInterfaceDeclaration
    At "@" @ 13..14 leading=[Newline "\n", Whitespace "            "]
    InterfaceKw "interface" @ 14..23 trailing=[Whitespace " "]
    Identifier "Contract" @ 24..32 trailing=[Whitespace " "]
    AnnotationInterfaceBody
      LBrace "{" @ 33..34
      AnnotationElementList
        AnnotationElementDeclaration
          ClassType
            Name
              Identifier "String" @ 51..57 leading=[Newline "\n", Whitespace "                "] trailing=[Whitespace " "]
          Identifier "value" @ 58..63
          LParen "(" @ 63..64
          RParen ")" @ 64..65 trailing=[Whitespace " "]
          DefaultValue
            DefaultKw "default" @ 66..73 trailing=[Whitespace " "]
            AnnotationElementValue
              LiteralExpression
                StringLiteral "\"x\"" @ 74..77
          Semicolon ";" @ 77..78
        AnnotationElementDeclaration
          ArrayType
            PrimitiveType
              IntKw "int" @ 95..98 leading=[Newline "\n", Whitespace "                "]
            ArrayDimensions
              ArrayDimension
                LBracket "[" @ 98..99
                RBracket "]" @ 99..100 trailing=[Whitespace " "]
          Identifier "flags" @ 101..106
          LParen "(" @ 106..107
          RParen ")" @ 107..108 trailing=[Whitespace " "]
          DefaultValue
            DefaultKw "default" @ 109..116 trailing=[Whitespace " "]
            AnnotationElementValue
              AnnotationArrayInitializer
                LBrace "{" @ 117..118
                AnnotationElementValue
                  LiteralExpression
                    IntegerLiteral "1" @ 118..119
                Comma "," @ 119..120 trailing=[Whitespace " "]
                AnnotationElementValue
                  LiteralExpression
                    IntegerLiteral "2" @ 121..122
                RBrace "}" @ 122..123
          Semicolon ";" @ 123..124
        AnnotationElementDeclaration
          ClassType
            Name
              Identifier "Nested" @ 141..147 leading=[Newline "\n", Whitespace "                "] trailing=[Whitespace " "]
          Identifier "nested" @ 148..154
          LParen "(" @ 154..155
          RParen ")" @ 155..156 trailing=[Whitespace " "]
          DefaultValue
            DefaultKw "default" @ 157..164 trailing=[Whitespace " "]
            AnnotationElementValue
              Annotation
                At "@" @ 165..166
                Name
                  Identifier "Nested" @ 166..172
          Semicolon ";" @ 172..173
      RBrace "}" @ 186..187 leading=[Newline "\n", Whitespace "            "]
  AnnotationInterfaceDeclaration
    At "@" @ 201..202 leading=[Newline "\n", Newline "\n", Whitespace "            "]
    InterfaceKw "interface" @ 202..211 trailing=[Whitespace " "]
    Identifier "Nested" @ 212..218 trailing=[Whitespace " "]
    AnnotationInterfaceBody
      LBrace "{" @ 219..220
      AnnotationElementList
      RBrace "}" @ 220..221
  Eof "" @ 230..230 leading=[Newline "\n", Whitespace "        "]

outcome: Clean

diagnostics:
  (none)
