crates/jolt_java_syntax/src/parser/snapshots/jolt_java_syntax__parser__tests__array_type_dims_have_per_dimension_nodes.snap
---
source: crates/jolt_java_syntax/src/parser/tests.rs
expression: "&parse"
---
syntax:
CompilationUnit
  ClassDeclaration
    ClassKw "class" @ 13..18 leading=[Newline "\n", Whitespace "            "] trailing=[Whitespace " "]
    Identifier "ArrayTypePerDimensionDims" @ 19..44 trailing=[Whitespace " "]
    ClassBody
      LBrace "{" @ 45..46
      ClassBodyDeclaration
        FieldDeclaration
          ArrayType
            ClassType
              Name
                Identifier "String" @ 63..69 leading=[Newline "\n", Whitespace "                "] trailing=[Whitespace " "]
            ArrayDimensions
              ArrayDimension
                Annotation
                  At "@" @ 70..71
                  Name
                    Identifier "A" @ 71..72 trailing=[Whitespace " "]
                LBracket "[" @ 73..74
                RBracket "]" @ 74..75 trailing=[Whitespace " "]
              ArrayDimension
                Annotation
                  At "@" @ 76..77
                  Name
                    Identifier "B" @ 77..78 trailing=[Whitespace " "]
                LBracket "[" @ 79..80
                RBracket "]" @ 80..81 trailing=[Whitespace " "]
          VariableDeclaratorList
            VariableDeclarator
              Identifier "names" @ 82..87
          Semicolon ";" @ 87..88
      RBrace "}" @ 101..102 leading=[Newline "\n", Whitespace "            "]
  AnnotationInterfaceDeclaration
    At "@" @ 116..117 leading=[Newline "\n", Newline "\n", Whitespace "            "]
    InterfaceKw "interface" @ 117..126 trailing=[Whitespace " "]
    Identifier "A" @ 127..128 trailing=[Whitespace " "]
    AnnotationInterfaceBody
      LBrace "{" @ 129..130
      AnnotationElementList
      RBrace "}" @ 130..131
  AnnotationInterfaceDeclaration
    At "@" @ 144..145 leading=[Newline "\n", Whitespace "            "]
    InterfaceKw "interface" @ 145..154 trailing=[Whitespace " "]
    Identifier "B" @ 155..156 trailing=[Whitespace " "]
    AnnotationInterfaceBody
      LBrace "{" @ 157..158
      AnnotationElementList
      RBrace "}" @ 158..159
  Eof "" @ 168..168 leading=[Newline "\n", Whitespace "        "]

diagnostics:
  (none)
